Change font and fix flickering bug in panels

--- a/core/less/icons/icon-generic.less
+++ b/core/less/icons/icon-generic.less
@@ -21,7 +21,7 @@
 		font-style: normal;
 		font-weight: normal;
 		line-height: normal;
-		vertical-align: text-top;
+		vertical-align: -15%;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
 	}
