--- a/core/less/panel/index.less
+++ b/core/less/panel/index.less
@@ -4,6 +4,8 @@
 
 .ev-panels-container {
     background: @ev-panel-dark-color;
+    max-width: 100%;
+    overflow: hidden;
     display: flex;
 }
 
